--- a/doc/tlisp.tex
+++ b/doc/tlisp.tex
@@ -1,3 +1,5 @@
+% $Id: tlisp.tex,v 1.2 2002-09-09 06:44:00 steffen Exp $
+
 \documentclass[11pt,a4paper,titlepage]{article}
 \usepackage{german}
 \usepackage{a4}
