--- a/doc/tlisp.tex
+++ b/doc/tlisp.tex
@@ -1,14 +1,37 @@
-% $Id: tlisp.tex,v 1.2 2002-09-09 06:44:00 steffen Exp $
+% $Id: tlisp.tex,v 1.3 2004-10-12 20:51:04 steffen Exp $
 
 \documentclass[11pt,a4paper,titlepage]{article}
-\usepackage{german}
+
 \usepackage{a4}
+\usepackage[german]{babel}
+\usepackage{bibgerm}
+\usepackage[latin1]{inputenc}
+\usepackage{makeidx}
+	\makeindex
+\usepackage{nomencl}
+	\makeglossary
+\usepackage{graphicx}
+\usepackage[colorlinks=true,urlcolor=blue]{hyperref}
+	
+\pdfinfo
+{
+    /Title	(TLISP)
+    /Subject	(TinyLISP Version 1.0)
+    /Author	(Steffen Hieber)
+}
+
+\addtolength\topmargin{-27pt}
+\addtolength\textheight{68pt}
 
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{5pt plus 2pt minus 1pt}
 
-\addtolength\topmargin{-27pt}
-\addtolength\textheight{68pt}
+\setcounter{secnumdepth}{5}
+\setcounter{tocdepth}{5}
+
+\newcommand{\uu}[1]{\underline{#1}}
+
+\pagestyle{headings}
 
 \title{TinyLISP Version 1.0}
 \author{Steffen Hieber}
@@ -59,14 +82,17 @@ der Sprache LISP, wie ihn Prof.~Dr.~Dieter~M"uller~\cite{mu} beschreibt.
 Dieses Skript ist kein Lehrbuch zu LISP oder Forth, die Lekt"ure von \cite{mu}
 und \cite{ze} wird vorausgesetzt. 
 
+% Stichwortverzeichnis
 \newpage
-\begin{thebibliography}{9}
-\bibitem{mu}
-D.~M"uller: {\it LISP -- Eine elementare Einf"uhrung in die Programmierung
-nicht\-numerischer Aufgaben}, BI-Hochschultaschenb"ucher Bd.~628 (1985)
-\bibitem{ze}
-R.~Zech: {\it Forth 83 -- Eine gr"undliche Einf"uhrung in die Forth-Version --
-auch f"ur PC's}, Franzis'-Verlag M"unchen (1987)
-\end{thebibliography}
+\renewcommand{\indexname}{Stichwortverzeichnis}
+\addcontentsline{toc}{section}{\indexname}
+\printindex
+
+% Literaturverzeichnis
+\nocite{*}
+\newpage
+\addcontentsline{toc}{section}{\refname}
+\bibliography{tlisp}
+\bibliographystyle{gerplain}
 
 \end{document}
