--- a/doc/tlisp.bib
+++ b/doc/tlisp.bib
@@ -11,3 +11,12 @@
    author = "R.~Zech",
    publisher = "Franzis'-Verlag München",
    year = 1987 }
+
+@BOOK{mc,
+   key = 3,
+   title = "LISP 1.5 Programmer's Manual",
+   author = "John~McCarthy",
+   publisher = "MIT Press",
+   address = "Cambridge, Massachusetts",
+   edition = "Second",
+   year = 1962 }
