added LISP 1.5 Primer by Clark Weissman

--- a/doc/tlisp.bib
+++ b/doc/tlisp.bib
@@ -15,8 +15,16 @@
 @BOOK{mc,
    key = 3,
    title = "LISP 1.5 Programmer's Manual",
-   author = "John~McCarthy",
+   author = "John McCarthy",
    publisher = "MIT Press",
    address = "Cambridge, Massachusetts",
    edition = "Second",
    year = 1962 }
+
+@BOOK{we,
+   key = 4,
+   title = "LISP 1.5 Primer",
+   author = "Clark Weissman",
+   publisher = "Dickenson Publishing Company, Inc.",
+   address = "Belmont, California",
+   year = 1967 }
