Improved GC by introducing envlist

--- a/doc/tlisp.tex
+++ b/doc/tlisp.tex
@@ -345,7 +345,7 @@ driver
                                     >NUMBER
                                     OPEN-FILE
 \end{verbatim}
-\item Dokumentation
+\item Dokumentation inkl. Abweichungen von Müllers Buch (i.e. FUNCTION)
 \end{enumerate}
 
 % Tabellenverzeichnis
