Refactored some words, added FIXP

--- a/doc/tlisp.tex
+++ b/doc/tlisp.tex
@@ -301,8 +301,8 @@ Version 2.1.0 Modified 01Jun84
 Auf Laufwerk B: befindet sich F83, Laufwerk C: TLISP.
 \begin{verbatim}
 c:
-r ..\\tlisp.sub l
-submit tlisp ..\\
+r ..\tlisp.sub l
+submit tlisp ..\
 \end{verbatim}
 
 \subsubsection{DOS}
