Updated Android installation steps

--- a/doc/tlisp.tex
+++ b/doc/tlisp.tex
@@ -29,8 +29,7 @@
 	pdftitle={TLISP},
 	pdfauthor={Steffen Hieber},
 	pdfpagemode=UseNone,
-	pdfstartview=FitH,
-	pdfstartpage=4
+	pdfstartview=FitH
 }
 \fi
 
@@ -241,27 +240,28 @@ Siehe auch:   & \multicolumn{2}{l}{\hyperref[NUMBERP]{NUMBERP}}
 Unter Windows wird TLISP mittels der Batch-Datei \path{tlisp.cmd}\index{tlisp.cmd} gestartet.
 
 \subsubsection{Android}
-Sei \path{/storage/sdCard0} der interne Speicher und sei
-\path{/storage/extSdCard/tlisp} das Installationsverzeichnis von TLISP.
+Am Einfachsten ist die Installation im Heimatverzeichnis von Gforth.
 \begin{enumerate}
 \item Installation von Gforth aus dem \href{https://play.google.com/store/apps/details?id=gnu.gforth}{Google Play Store} und Ausführen von Gforth
-      zum Entpacken des Quellcodes.
-\item Kopieren der Dateien \path{tlisp.fs} und \path{*.lsp} nach
-      \path{/storage/extSdCard/tlisp}
-\item Erzeugen von \path{/storage/sdCard0/gforth/home/.gforthrc} mit
-      folgendem Inhalt:
+      zum Entpacken des Dateien.
+\item Ermitteln des Heimatverzeichnisses \verb|HOME| von Gforth
+        \begin{verbatim}
+        sh pwd
+        \end{verbatim}
+\item Kopieren der Dateien \path{tlisp.fs} und \path{*.lsp} in das Verzeichnis \path{~/tlisp}.
+\item Erzeugen der Datei \path{~/.config/gforthrc} mit folgendem Inhalt:
         \begin{verbatim}
         0.5e gl-fscale    \ SM-T580 only
 
         : tl    \ run tlisp on my android handy
             warnings off    \ 0. vs. #0.
-            s" /storage/extSdCard/tlisp" set-dir drop
+            s" tlisp" set-dir drop
             s" tlisp.fs" required
             s" driver" evaluate
         ;
         \end{verbatim}
-      Ab Gforth Version \href{https://github.com/forthy42/gforth/releases/tag/0.7.9_20180905}{0.7.9\_20180905}
-      heißt diese Datei \path{~/.config/gforthrc} statt \path{~/.gforthrc} (Poettering-Stil).
+      Der Poettering-Stil wird ab Gforth Version \href{https://github.com/forthy42/gforth/releases/tag/0.7.9_20180905}{0.7.9\_20180905}
+      verwendet, vorher hieß diese Datei \path{~/.gforthrc}.
 \end{enumerate}
 Eine gute Tastatur ist das \href{https://play.google.com/store/apps/details?id=org.pocketworkstation.pckeyboard}{Hacker's Keyboard}.
 
